--- a/content/guides/async-walkthrough.adoc
+++ b/content/guides/async-walkthrough.adoc
@@ -19,7 +19,7 @@ To use core.async, declare a dependency on Clojure 1.7.0 or higher and the lates
 ----
 {:deps
  {org.clojure/clojure {:mvn/version "1.10.1"}
-  org.clojure/core.async {:mvn/version "0.5.527"}}}
+  org.clojure/core.async {:mvn/version "1.0.567"}}}
 ----
 
 To start working with core.async, require the `clojure.core.async` namespace at the REPL:
@@ -34,7 +34,7 @@ Or include it in your namespace:
 [source,clojure]
 ----
 (ns my.ns
-  (:require [clojure.core.async :as async :refer [<!! >!! <! >!]))
+  (:require [clojure.core.async :as a :refer [<!! >!! <! >!]]))
 ----
 
 == Channels
@@ -45,22 +45,22 @@ Use `chan` to make an unbuffered channel:
 
 [source,clojure]
 ----
-(chan)
+(a//chan)
 ----
 
-Pass a number to create a channel with a fixed buffer:
+Pass a number to create a channel with a fixed buffer size:
 
 [source,clojure]
 ----
-(chan 10)
+(a/chan 10)
 ----
 
 `close!` a channel to stop accepting puts. Remaining values are still available to take. Drained channels return nil on take. Nils may not be sent over a channel explicitly!
 
 [source,clojure]
 ----
-(let [c (chan)]
-  (close! c))
+(let [c (a/chan)]
+  (a/close! c))
 ----
 
 Channels can also use custom buffers that have different policies for the "full" case.  Two useful examples are provided in the API.
@@ -68,10 +68,10 @@ Channels can also use custom buffers that have different policies for the "full"
 [source,clojure]
 ----
 ;; Use `dropping-buffer` to drop newest values when the buffer is full:
-(chan (dropping-buffer 10))
+(a/chan (a/dropping-buffer 10))
 
 ;; Use `sliding-buffer` to drop oldest values when the buffer is full:
-(chan (sliding-buffer 10))
+(a/chan (a/sliding-buffer 10))
 ----
 
 == Threads
@@ -80,20 +80,20 @@ In ordinary threads, we use `>!!` (blocking put) and `<!!` (blocking take) to co
 
 [source,clojure]
 ----
-(let [c (chan 10)]
+(let [c (a/chan 10)]
   (>!! c "hello")
   (assert (= "hello" (<!! c)))
-  (close! c))
+  (a/close! c))
 ----
 
 Because these are blocking calls, if we try to put on an unbuffered channel, we will block the main thread. We can use `thread` (like `future`) to execute a body in a pool thread and return a channel with the result. Here we launch a background task to put "hello" on a channel, then read that value in the current thread.
 
 [source,clojure]
 ----
-(let [c (chan)]
+(let [c (a/chan)]
   (thread (>!! c "hello"))
   (assert (= "hello" (<!! c)))
-  (close! c))
+  (a/close! c))
 ----
 
 == Go Blocks and IOC Threads
@@ -104,10 +104,10 @@ Here we convert our prior channel example to use go blocks:
 
 [source,clojure]
 ----
-(let [c (chan)]
+(let [c (a/chan)]
   (go (>! c "hello"))
-  (assert (= "hello" (<!! (go (<! c)))))
-  (close! c))
+  (assert (= "hello" (<!! (a/go (<! c)))))
+  (a/close! c))
 ----
 
 Instead of the explicit thread and blocking call, we use a go block for the producer. The consumer uses a go block to take, then returns a result channel, from which we do a blocking take.
@@ -120,10 +120,10 @@ We can create a background thread with alts that combines inputs on either of tw
 
 [source,clojure]
 ----
-(let [c1 (chan)
-      c2 (chan)]
+(let [c1 (a/chan)
+      c2 (a/chan)]
   (thread (while true
-            (let [[v ch] (alts!! [c1 c2])]
+            (let [[v ch] (a/alts!! [c1 c2])]
               (println "Read" v "from" ch))))
   (>!! c1 "hi")
   (>!! c2 "there"))
@@ -141,13 +141,13 @@ We can use alts! to do the same thing with go blocks:
 
 [source,clojure]
 ----
-(let [c1 (chan)
-      c2 (chan)]
+(let [c1 (a/chan)
+      c2 (a/chan)]
   (go (while true
-        (let [[v ch] (alts! [c1 c2])]
+        (let [[v ch] (a/alts! [c1 c2])]
           (println "Read" v "from" ch))))
-  (go (>! c1 "hi"))
-  (go (>! c2 "there")))
+  (a/go (>! c1 "hi"))
+  (a/go (>! c2 "there")))
 ----
 
 Since go blocks are lightweight processes not bound to threads, we can have LOTS of them! Here we create 1000 go blocks that say hi on 1000 channels. We use alts!! to read them as they're ready.
@@ -157,9 +157,9 @@ Since go blocks are lightweight processes not bound to threads, we can have LOTS
 (let [n 1000
       cs (repeatedly n chan)
       begin (System/currentTimeMillis)]
-  (doseq [c cs] (go (>! c "hi")))
+  (doseq [c cs] (a//go (>! c "hi")))
   (dotimes [i n]
-    (let [[v c] (alts!! cs)]
+    (let [[v c] (a/alts!! cs)]
       (assert (= "hi" v))))
   (println "Read" n "msgs in" (- (System/currentTimeMillis) begin) "ms"))
 ----
@@ -168,7 +168,7 @@ Since go blocks are lightweight processes not bound to threads, we can have LOTS
 
 [source,clojure]
 ----
-(let [t (timeout 100)
+(let [t (a/timeout 100)
       begin (System/currentTimeMillis)]
   (<!! t)
   (println "Waited" (- (System/currentTimeMillis) begin)))
@@ -178,9 +178,9 @@ We can combine timeout with `alts!` to do timed channel waits.  Here we wait for
 
 [source,clojure]
 ----
-(let [c (chan)
+(let [c (a/chan)
       begin (System/currentTimeMillis)]
-  (alts!! [c (timeout 100)])
+  (alts!! [c (a/timeout 100)])
   (println "Gave up after" (- (System/currentTimeMillis) begin)))
 ----
 
