--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -19,6 +19,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * https://www.adstage.io/[AdStage,opts=nofollow]
 * http://www.advanceautoparts.com/[Advance Auto Parts,opts=nofollow]
 * http://adzerk.com/[Adzerk,opts=nofollow]
+* http://www.againtelligent.com/en/[AGA,opts=nofollow]
 * https://www.onthemarket.com[AgentsMutual/OnTheMarket,opts=nofollow]
 * http://www.airloyal.com[Airloyal,opts=nofollow]
 * https://www.ajira.tech/[Ajira,opts=nofollow]
@@ -169,6 +170,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * http://about.getset.com/[GetSet,opts=nofollow]
 * http://www.gocatch.com/[GoCatch,opts=nofollow]
 * https://gofore.com/en/home/[Gofore,opts=nofollow]
+* https://www.goizper.com/[Goizper Group,opts=nofollow]
 * https://www.go-jek.com[GO-JEK,opts=nofollow]
 * https://goldfynch.com/[GoldFynch,opts=nofollow]
 * https://goodhertz.co/[Goodhertz,opts=nofollow]
@@ -291,6 +293,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * http://www.opentable.com/[OpenTable,opts=nofollow]
 * http://www.oracle.com[Oracle,opts=nofollow]
 * http://www.orgsync.com/[OrgSync,opts=nofollow]
+* https://www.orkli.com/en[Orkli,opts=nofollow]
 * https://www.oscaro.com/[Oscaro,opts=nofollow]
 * http://otto.de[Otto,opts=nofollow]
 * http://ourhub.dk[OurHub,opts=nofollow]
