--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -12,172 +12,182 @@ _Listed in order of descending release date of newest edition._
 [width="80", cols="<.^30a,.^70", role="table"]
 |===
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51UNlhb3nmL._SL160.jpg[Hands-On Reactive Programming with Clojure,link="http://amzn.com/B07N7525GX"]
+| image::https://images-na.ssl-images-amazon.com/images/I/51AWkNYd4NL._SL160.jpg[The Clojure Workshop,link="https://www.amazon.com/dp/B082FJ9ZLY",width="130"]
+| https://www.amazon.com/dp/B082FJ9ZLY[The Clojure Workshop] +
+by Joseph Fahey, Thomas Haratyk, Scott McCaughie, Yehonathan Sharvit, Konrad Szydlo +
+Jan 29, 2020
+
+| image::https://images-na.ssl-images-amazon.com/images/I/51UNlhb3nmL._SL160.jpg[Hands-On Reactive Programming with Clojure,link="http://amzn.com/B07N7525GX",width="130"]
 | http://amzn.com/B07N7525GX[Reactive Programming with Clojure] +
 by Konrad Szydlo, Leonardo Borges +
 Jan 25, 2019
 
-| image::https://s3.amazonaws.com/titlepages.leanpub.com/elementsofclojure/small[Elements of Clojure,link="https://leanpub.com/elementsofclojure"]
+| image::https://s3.amazonaws.com/titlepages.leanpub.com/elementsofclojure/small[Elements of Clojure,link="https://leanpub.com/elementsofclojure",width="130"]
 | https://leanpub.com/elementsofclojure[Elements of Clojure] +
 by Zachary Tellman +
 Nov 30, 2018
 
-| image::https://user-images.githubusercontent.com/1059232/45357661-9f48b480-b5cf-11e8-848d-87320fb80710.png[Clojure Extended: Java interop,link="https://leanpub.com/clojure-java-interop/"]
+| image::https://www.packtpub.com/media/catalog/product/cache/ecd051e9670bd57df35c8f0b122d8aea/9/7/9781838982362-original.jpeg[Clojure Polymorphism,link="https://www.packtpub.com/programming/clojure-polymorphism",width="130"]
+| https://www.packtpub.com/programming/clojure-polymorphism[Clojure Polymorphism] +
+by Paul Stadig +
+Nov 15, 2019
+
+| image::https://user-images.githubusercontent.com/1059232/45357661-9f48b480-b5cf-11e8-848d-87320fb80710.png[Clojure Extended: Java interop,link="https://leanpub.com/clojure-java-interop/",width="130"]
 | https://leanpub.com/clojure-java-interop/[Clojure Extended: Java interop] +
 by Ivan Grishaev +
 Aug 31, 2018
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51dqOLcPL7L._SL160.jpg[Getting Clojure,link="https://pragprog.com/book/roclojure/getting-clojure"]
+| image::https://images-na.ssl-images-amazon.com/images/I/51dqOLcPL7L._SL160.jpg[Getting Clojure,link="https://pragprog.com/book/roclojure/getting-clojure",width="130"]
 | https://pragprog.com/book/roclojure/getting-clojure[Getting Clojure] +
 by Russ Olsen +
 May 19, 2018
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51Bvd25CstL._SL160.jpg[Programming Clojure 3rd edition,link="http://a.co/bSxW6A6"]
+| image::https://images-na.ssl-images-amazon.com/images/I/51Bvd25CstL._SL160.jpg[Programming Clojure 3rd edition,link="http://a.co/bSxW6A6",width="130"]
 | http://a.co/bSxW6A6[Programming Clojure 3rd edition] +
 by Alex Miller, Stuart Halloway, Aaron Bedra +
 Feb 21, 2018
 
-| image::https://images-na.ssl-images-amazon.com/images/I/41k50H6VpaL._SL160.jpg[ClojureScript Unraveled,link="http://a.co/cDfN4n4"]
+| image::https://www.packtpub.com/media/catalog/product/cache/ecd051e9670bd57df35c8f0b122d8aea/9/7/9781788622240cov-20copy.png[Microservices with Clojure,link="https://www.packtpub.com/application-development/microservices-clojure",width="130"]
+| https://www.packtpub.com/application-development/microservices-clojure[Microservices with Clojure] +
+by Anuj Kumar +
+Jan 25, 2018
+
+| image::https://images-na.ssl-images-amazon.com/images/I/41k50H6VpaL._SL160.jpg[ClojureScript Unraveled,link="http://a.co/cDfN4n4",width="130"]
 | http://a.co/cDfN4n4[Quick Clojure: Effective Functional Programming] +
 by Mark McDonnell +
 Aug 23, 2017
 
-| image::https://s3.amazonaws.com/titlepages.leanpub.com/clojurepolymorphism/small[Clojure Polymorphism,link="https://leanpub.com/clojurepolymorphism"]
-| https://leanpub.com/clojurepolymorphism[Clojure Polymorphism] +
-by Paul Stadig +
-Oct 31, 2016
-
-| image::https://images-na.ssl-images-amazon.com/images/I/518xLvhHZ1L._SL160.jpg[Web Development with Clojure,link="http://a.co/c2gI4l2"]
+| image::https://images-na.ssl-images-amazon.com/images/I/518xLvhHZ1L._SL160.jpg[Web Development with Clojure,link="http://a.co/c2gI4l2",width="130"]
 | http://a.co/c2gI4l2[Web Development with Clojure] +
 by Dmitri Sotnikov +
 Aug 23, 2016
 
-| image::https://s3.amazonaws.com/titlepages.leanpub.com/clojurescript-unraveled/small[ClojureScript Unraveled,link="https://leanpub.com/clojurescript-unraveled"]
+| image::https://s3.amazonaws.com/titlepages.leanpub.com/clojurescript-unraveled/small[ClojureScript Unraveled,link="https://leanpub.com/clojurescript-unraveled",width="130"]
 | https://leanpub.com/clojurescript-unraveled[ClojureScript Unraveled] +
 by Andrey Antukh, Alejandro Gómez +
 Jul 25, 2016
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51EwRiXh4ZL._SL160.jpg[Learning ClojureScript, link="http://a.co/2X3MJn2"]
+| image::https://images-na.ssl-images-amazon.com/images/I/51EwRiXh4ZL._SL160.jpg[Learning ClojureScript, link="http://a.co/2X3MJn2",width="130"]
 | http://a.co/2X3MJn2[Learning ClojureScript] +
 by W. David Jarvis, Rafik Naccache, Allen Rohner +
 Jun 30, 2016
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51iq-PKIZ8L._SL160.jpg[Professional Clojure, link="http://a.co/bSHZ7X3"]
+| image::https://images-na.ssl-images-amazon.com/images/I/51iq-PKIZ8L._SL160.jpg[Professional Clojure, link="http://a.co/bSHZ7X3",width="130"]
 | http://a.co/bSHZ7X3[Professional Clojure] +
 by Jeremy Anderson, Michael Gaare, Justin Holguín, Nick Bailey, and Timothy Pratley +
 Jun 7, 2016
 
-| image::https://images-na.ssl-images-amazon.com/images/I/61TJZjnjO0L._SL160.jpg[Mastering Clojure, link="http://a.co/bTLhJ2d"]
+| image::https://images-na.ssl-images-amazon.com/images/I/61TJZjnjO0L._SL160.jpg[Mastering Clojure, link="http://a.co/bTLhJ2d",width="130"]
 | http://a.co/bTLhJ2d[Mastering Clojure] +
 by Akhil Wali +
 Mar 28, 2016
 
-| image::https://images-na.ssl-images-amazon.com/images/I/61p47dd81cL._SL160.jpg[Clojure for Java Developers, link="http://a.co/029aVrm"]
+| image::https://images-na.ssl-images-amazon.com/images/I/61p47dd81cL._SL160.jpg[Clojure for Java Developers, link="http://a.co/029aVrm",width="130"]
 | http://a.co/029aVrm[Clojure for Java Developers] +
 by Eduardo Diaz +
 Feb 23, 2016
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51ofF2ckdkL._SL160.jpg[Clojure for Finance, link="http://a.co/fbHnhEM"]
+| image::https://images-na.ssl-images-amazon.com/images/I/51ofF2ckdkL._SL160.jpg[Clojure for Finance, link="http://a.co/fbHnhEM",width="130"]
 | http://a.co/fbHnhEM[Clojure for Finance] +
 by Timothy Washington +
 Jan 11, 2016
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51QWOEjmtIL._SL160.jpg[Clojure In Action, link="http://a.co/a4hDbTn"]
+| image::https://images-na.ssl-images-amazon.com/images/I/51QWOEjmtIL._SL160.jpg[Clojure In Action, link="http://a.co/a4hDbTn",width="130"]
 | http://a.co/a4hDbTn[Clojure In Action] +
 by Amit Rathore +
 Jan 1, 2016
 
-| image::https://images-na.ssl-images-amazon.com/images/I/6112vbQYDLL._SL160.jpg[Clojure for the Brave and True,link="http://a.co/bsviqV7"]
+| image::https://images-na.ssl-images-amazon.com/images/I/6112vbQYDLL._SL160.jpg[Clojure for the Brave and True,link="http://a.co/bsviqV7",width="130"]
 | http://a.co/bsviqV7[Clojure for the Brave and True] +
 by Daniel Higginbotham +
 Oct 23, 2015
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51aMgNS%2BK7L._SL160.jpg[Clojure Recipes,link="http://a.co/clSHVQi"]
+| image::https://images-na.ssl-images-amazon.com/images/I/51aMgNS%2BK7L._SL160.jpg[Clojure Recipes,link="http://a.co/clSHVQi",width="130"]
 | http://a.co/clSHVQi[Clojure Recipes] +
 by Julian Gamble +
 Oct 23, 2015
 
-| image::https://images-na.ssl-images-amazon.com/images/I/41iH5aTHB3L._SL160.jpg[Clojure Applied,link="http://a.co/1HL2XPF"]
+| image::https://images-na.ssl-images-amazon.com/images/I/41iH5aTHB3L._SL160.jpg[Clojure Applied,link="http://a.co/1HL2XPF",width="130"]
 | http://a.co/1HL2XPF[Clojure Applied: From Practice to Practitioner] +
 by Ben Vandgrift, Alex Miller +
 Sept 6, 2015
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51ki-47i6bL._SL160.jpg[Clojure for Data Science,link="http://a.co/idtKjhS"]
+| image::https://images-na.ssl-images-amazon.com/images/I/51ki-47i6bL._SL160.jpg[Clojure for Data Science,link="http://a.co/idtKjhS",width="130"]
 | http://a.co/idtKjhS[Clojure for Data Science] +
 by Henry Garner +
 Sept 3, 2015
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51Nym1wJXVL._SL160.jpg[Clojure High Performance Programming,link="http://a.co/7adcmsl"]
+| image::https://images-na.ssl-images-amazon.com/images/I/51Nym1wJXVL._SL160.jpg[Clojure High Performance Programming,link="http://a.co/7adcmsl",width="130"]
 | http://a.co/7adcmsl[Clojure High Performance Programming] +
 by Shantanu Kumar +
 Sept 1, 2015
 
-| image::https://images-na.ssl-images-amazon.com/images/I/515vh5czqnL._SL160.jpg[Clojure Data Structures and Algorithms,link="http://a.co/g7JAFAS"]
+| image::https://images-na.ssl-images-amazon.com/images/I/515vh5czqnL._SL160.jpg[Clojure Data Structures and Algorithms,link="http://a.co/g7JAFAS",width="130"]
 | http://a.co/g7JAFAS[Clojure Data Structures and Algorithms] +
 by Rafik Naccache +
 Aug 19, 2015
 
-| image::https://images-na.ssl-images-amazon.com/images/I/5122uV93jfL._SL160.jpg[Living Clojure,link="http://a.co/1m2Zt4p"]
+| image::https://images-na.ssl-images-amazon.com/images/I/5122uV93jfL._SL160.jpg[Living Clojure,link="http://a.co/1m2Zt4p",width="130"]
 | http://a.co/1m2Zt4p[Living Clojure] +
 by Carin Meier +
 Apr 30, 2015
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51l1oGz9N7L._SL160.jpg[Clojure Reactive Programming,link="http://a.co/fhyaFka"]
+| image::https://images-na.ssl-images-amazon.com/images/I/51l1oGz9N7L._SL160.jpg[Clojure Reactive Programming,link="http://a.co/fhyaFka",width="130"]
 | http://a.co/fhyaFka[Clojure Reactive Programming] +
 by Leonardo Borges +
 Mar 24, 2015
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51XnilmUaIL._SL160.jpg[Clojure Web Development Essentials,link="http://a.co/2FlRxd5"]
+| image::https://images-na.ssl-images-amazon.com/images/I/51XnilmUaIL._SL160.jpg[Clojure Web Development Essentials,link="http://a.co/2FlRxd5",width="130"]
 | http://a.co/2FlRxd5[Clojure Web Development Essentials] +
 by Ryan Baldwin +
 Feb 16, 2015
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51-B3kElSiL._SL160.jpg[Clojure Data Analysis Cookbook, link="http://a.co/gIwPEkt"]
+| image::https://images-na.ssl-images-amazon.com/images/I/51-B3kElSiL._SL160.jpg[Clojure Data Analysis Cookbook, link="http://a.co/gIwPEkt",width="130"]
 | http://a.co/gIwPEkt[Clojure Data Analysis Cookbook] +
 by Eric Rochester +
 Jan 22, 2015
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51nhUEYSLhL._SL160.jpg[Mastering Clojure Macros,link="http://a.co/4VjjiQJ"]
+| image::https://images-na.ssl-images-amazon.com/images/I/51nhUEYSLhL._SL160.jpg[Mastering Clojure Macros,link="http://a.co/4VjjiQJ",width="130"]
 | http://a.co/4VjjiQJ[Mastering Clojure Macros] +
 by Colin Jones +
 Sept 5, 2014
 
-| image::https://images-na.ssl-images-amazon.com/images/I/518RxlXpXsL._SL160.jpg[The Joy of Clojure,link="http://a.co/evdNcOs"]
+| image::https://images-na.ssl-images-amazon.com/images/I/518RxlXpXsL._SL160.jpg[The Joy of Clojure,link="http://a.co/evdNcOs",width="130"]
 | http://a.co/evdNcOs[The Joy of Clojure] +
 by Michael Fogus, Chris Houser +
 Jun 13, 2014
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51gyxyvmX3L._SL160.jpg[Mastering Clojure Data Analysis,link="http://a.co/bYwhMwH"]
+| image::https://images-na.ssl-images-amazon.com/images/I/51gyxyvmX3L._SL160.jpg[Mastering Clojure Data Analysis,link="http://a.co/bYwhMwH",width="130"]
 | http://a.co/bYwhMwH[Mastering Clojure Data Analysis] +
 by Eric Rochester +
 May 26, 2014
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51Af%2B5qKOeL._SL160.jpg[Clojure for Machine Learning,link="http://a.co/7PRmDOK"]
+| image::https://images-na.ssl-images-amazon.com/images/I/51Af%2B5qKOeL._SL160.jpg[Clojure for Machine Learning,link="http://a.co/7PRmDOK",width="130"]
 | http://a.co/7PRmDOK[Clojure for Machine Learning] +
 by Akhil Wali +
 Apr 24, 2014
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51NPZu-5PiL._SL160.jpg[Clojure Cookbook, link="http://a.co/1K6SZSI"]
+| image::https://images-na.ssl-images-amazon.com/images/I/51NPZu-5PiL._SL160.jpg[Clojure Cookbook, link="http://a.co/1K6SZSI",width="130"]
 | http://a.co/1K6SZSI[Clojure Cookbook] +
 by Luke VanderHart and Ryan Neufeld +
 Mar 24, 2014
 
-| image::https://images-na.ssl-images-amazon.com/images/I/515hwMhZELL._SL160.jpg[Clojure for Domain-specific Languages,link="http://a.co/3rwXJkx"]
+| image::https://images-na.ssl-images-amazon.com/images/I/515hwMhZELL._SL160.jpg[Clojure for Domain-specific Languages,link="http://a.co/3rwXJkx",width="130"]
 | http://a.co/3rwXJkx[Clojure for Domain-specific Languages] +
 by Ryan Kelker +
 Dec 18, 2013
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51i1Cn-IqdL._SL160.jpg[Functional Programming Patterns in Scala and Clojure,link="http://a.co/2J3jvLX"]
+| image::https://images-na.ssl-images-amazon.com/images/I/51i1Cn-IqdL._SL160.jpg[Functional Programming Patterns in Scala and Clojure,link="http://a.co/2J3jvLX",width="130"]
 | http://a.co/2J3jvLX[Functional Programming Patterns in Scala and Clojure] +
 by Michael Bevilacqua-Linn +
 Nov 2, 2013
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51KgF%2B-38WL._SL160.jpg[ClojureScript: Up and Running,link="http://a.co/74IUDUu"]
+| image::https://images-na.ssl-images-amazon.com/images/I/51KgF%2B-38WL._SL160.jpg[ClojureScript: Up and Running,link="http://a.co/74IUDUu",width="130"]
 | http://a.co/74IUDUu[ClojureScript: Up and Running] +
 by Stuart Sierra, Luke VanderHart +
 Nov 10, 2012
 
-| image::https://images-na.ssl-images-amazon.com/images/I/41sY2b6MKiL._SL160.jpg[Clojure Programming,link="http://a.co/jiaX8tX"]
+| image::https://images-na.ssl-images-amazon.com/images/I/41sY2b6MKiL._SL160.jpg[Clojure Programming,link="http://a.co/jiaX8tX",width="130"]
 | http://a.co/jiaX8tX[Clojure Programming] +
 by Chas Emerick, Brian Carper, Christophe Grand +
 Apr 22, 2012
@@ -187,7 +197,7 @@ Apr 22, 2012
 by Stefan Kamphausen, Tim Oliver Kaiser +
 Sep 20, 2010
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51dWGdAPwUL._SL160.jpg[Practical Clojure, link="http://a.co/fWbYqs5"]
+| image::https://images-na.ssl-images-amazon.com/images/I/51dWGdAPwUL._SL160.jpg[Practical Clojure, link="http://a.co/fWbYqs5",width="130"]
 | http://a.co/fWbYqs5[Practical Clojure] +
 by Luke VanderHart, Stuart Sierra +
 Jun 1, 2010
